# my_flask_webpage

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt  uwsgi.ini
certs/: cert.pem  key.pem
src/: Dockerfile  __init__.py  assets.py  config.py  dev.db  index.html  setup.py  views.py
src/app/: __init__.py  models.py  views.py
src/app/templates/: base.html  formhelpers.html  index.html  login.html  privacy.html  project.html  projects.html
src/app/templates/projects/: msup.html  raspbi_webhost.html
src/my_flask_webpage/: __init__.py  dev.db
src/my_flask_webpage/app/: __init__.py  forms.py  models.py  views.py
src/my_flask_webpage/app/templates/: base.html  crownhall.html  forgotPW.html  impressum.html  index.html  internal.html  login.html  privacy.html  project.html  projects.html
src/my_flask_webpage/app/templates/projects/: msup.html  raspbi_webhost.html
src/my_flask_webpage/resource/: images.json  images.schema  projects.json  projects.schema
src/my_flask_webpage/setup/: __init__.py  init_db.py
src/resource/: images.json
src/setup/: __init__.py  init_db.py
src/templates/: base-layout.html  index.html
src/util/: RCSSMin.py  __init__.py
