[project]
name = "my_flask_webpage"
version = "0.1.0"
description = "flask webpage with uwsgi running via docker"
authors = [
    {name = "Jan Fenker", email = "coding@fenker.eu"},
]
dependencies = [
    "blinker==1.9.0",
    "click==8.1.8",
    "Flask==3.1.0",
    "itsdangerous==2.2.0",
    "Jinja2==3.1.5",
    "MarkupSafe==3.0.2",
    "uWSGI==2.0.28",
    "Werkzeug==3.1.3",
    "wheel==0.45.1",
    "pdm-backend==2.4.3",
    "flask-wtf==1.2.2",
    "wtforms==3.2.1",
    "Flask-SQLAlchemy==3.1.1",
    "greenlet==3.1.1",
    "typing-extensions==4.12.2",
    "python-dotenv==1.0.1",
    "dotenv==0.9.9",
    "jsonschema==4.23.0",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
