[project]
name = "my_flask_webpage"
version = "0.1.0"
description = "flask webpage with uwsgi running via docker"
authors = [
    { name = "Jan Fenker", email = "coding@fenker.eu" },
]
dependencies = [
    "flask",
    "flask-wtf",
    "wtforms",
    "Flask-SQLAlchemy",
    "flask-login",
    "python-dotenv",
    "jsonschema",
    "uWSGI"
]
requires-python = ">=3.12"
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
# alternatively: license = { file = "LICENSE" }

[build-system]
requires = ["pdm-backend>=2.4.3"]
build-backend = "pdm.backend"


[tool.pdm]
# This tells PDM your source is under 'src/'
package-dir = { "" = "src" }

[tool.pdm.build]
includes = ["src/", "README.md", "LICENSE", "uwsgi.ini", ".env.example"]
excludes = ["tests/", "*.pyc", "__pycache__"]

[tool.pdm.dev-dependencies]
dev = [
    "pytest",
    "pytest-flask"
]

[tool.pdm.scripts]
# Optional: add scripts for running the app
# run with 'pdm run <script-name>'
dev = { cmd = "flask run", env = { FLASK_APP = "app", FLASK_ENV = "development" } }

